--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Alpheios Simple Site
-description: A Template for A Simple Website with Alpheios Embedded
+title: My CANE Demo Site
+description: A demonstration of using Alpheios
